add materialize style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
             padding: 0;
             font-family: 'Lato', sans-serif;
         }
+        body {
+            padding: 0 5%;
+        }
     </style>
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+
 
     <title>NodeJS NGINX SSL</title>
 </head>
@@ -22,7 +30,7 @@
     </header>
 
     <section>
-        <h3>Install node npm</h3>
+        <h3 class="card-panel teal lighten-2">Install node npm</h3>
         <ul>
             <li>sudo curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -</li>
             <li>sudo apt install nodejs</li>
@@ -31,13 +39,19 @@
     </section>
 
     <section>
-        <h3>Clone project from Github</h3>
+        <h3 class="card-panel teal lighten-2">Clone project from Github</h3>
         <li>git clone this_project.git</li>
     </section>
 
     <section>
-        <h3></h3>
+        <h3 class="card-panel teal lighten-2">Third</h3>
     </section>
-    
+
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <script src="main.js"></script>
+
 </body>
 </html>
